# muwon

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  index.html  package-lock.json  package.json  plan-detailed.md  plan.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs  playlist.rs  queue.rs
src-tauri/src/core/: history.rs  library.rs  metadata.rs  mod.rs  persistence.rs  playback.rs  queue.rs  scanner.rs
src-tauri/src/models/: mod.rs  playlist.rs  song.rs  state.rs
src/components/: AlbumArt.tsx  ContentArea.tsx  ContextMenu.tsx  KeyboardShortcuts.tsx  LyricsPane.tsx  PlayerBar.tsx  PlaylistDialog.tsx  QueuePanel.tsx  SearchBar.tsx  Sidebar.tsx  SongList.tsx  SongRow.tsx  TitleBar.tsx
src/lib/: commands.ts  format.ts  types.ts
src/stores/: library.ts  player.ts  queue.ts  ui.ts
src/styles/: globals.css
